# shipment_risk_scoring_machine

./: .env.example  CLAUDE.md  project_notes.md  pyproject.toml  skills-lock.json
deploy/: README.md  ais-ingest.service
scripts/: diagnose_ingest_gaps.py  run_all.py  run_build_gold.py  run_build_tables.py  run_ingest_tracking.py
src/: config.py  dataset.py  features.py
src/ETL/: Gold_Layer.py  Silver_Layer.py
src/ingest/: client.py  fetch_tracking.py  tracking_client.py
tests/: test_ingest_resilience.py
