[project]
name = "datalumina-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.0",
    "python-dotenv>=1.1.1",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
